java and jni source files generation done

--- a/java_config.config
+++ b/java_config.config
@@ -1,12 +1,12 @@
 #set the generator type
-generator_type : java
+generator_type :- java
 
 #interface dir
-interface_dir : /home/sachin/cpptest/interfaces
+interface_dir :- /home/sachin/cpptest/interfaces
 
 #source dir
-source_dir : /home/sachin/cpptest/source
+source_dir :- /home/sachin/cpptest/source
 
 #out_put dirs
-java_output_dir : /home/sachin/cpptest/jni/java/core/natives/
-cpp_output_dir : /home/sachin/cpptest/jni/cpp
+java_output_dir :- /home/sachin/cpptest/jni/java/
+cpp_output_dir :- /home/sachin/cpptest/jni/cpp
